fixed alignment issues with header

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body {
 
 	font-size: 25px;
 
-	transform: translateY(8%);
+	transform: translateY(14%);
 }
 
 .aboutmemepic1 {
@@ -118,7 +118,7 @@ body {
 
   	margin-left: 818px;
 
-  	transform: translateY(-115%);
+  	transform: translateY(-108%);
 
   	width: 125px;
   	height: 125px;
